kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bankapp
  labels:
    name: bankapp
